--- a/tmpl/views/login.html
+++ b/tmpl/views/login.html
@@ -1,5 +1,5 @@
 {{ template "layout" . }}
-{{ define "title" }} {{ .PageAttributes.Title }} {{ end }}
+{{ define "title" }} {{ .PageTitle }} {{ end }}
 {{ define "styles" }}
     <link href="/assets/styles/login.css" rel="stylesheet">
 {{ end }}
