--- a/tmpl/views/login.html
+++ b/tmpl/views/login.html
@@ -3,6 +3,13 @@
 {{ define "styles" }}
     <link href="/assets/styles/login.css" rel="stylesheet">
 {{ end }}
+{{ define "scripts" }}
+    <script src="//code.jquery.com/jquery-3.5.1.min.js" type="text/javascript"></script>
+{{ end }}
+{{ define "body_scripts" }}
+    <script src="/assets/scripts/main.js" type="text/javascript"></script>
+    <script src="/assets/scripts/login.js" type="text/javascript"></script>
+{{ end }}
 {{ define "content" }}
     <div class="container" style="min-height: 550px;">
         <div class="d-flex justify-content-center h-100">
@@ -11,35 +18,30 @@
                     <h3>Sign In</h3>
                 </div>
                 <div class="card-body">
-                    <form method="post">
-                        {{ if .Errors.global }}
-                        <span class="badge badge-danger mb-3">{{ .Errors.global }}</span>
-                        {{ end }}
+                    <form name="loginForm" method="post">
+                        <span class="err-global badge badge-danger mb-3 hide"></span>
                         <div class="input-group form-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fas fa-user"></i></span>
                             </div>
-                            <input name="username" type="text" value="{{ .Forms.Username }}" class="form-control" placeholder="username">
+                            <input name="username" type="text" class="form-control" placeholder="username">
                         </div>
-                        {{ if .Errors.username }}
-                            <span class="badge badge-danger mb-3">{{ .Errors.username }}</span>
-                        {{ end }}
+                        <span class="err-username badge badge-danger mb-3 hide"></span>
                         <div class="input-group form-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fas fa-key"></i></span>
                             </div>
-                            <input name="password" type="password" value="{{ .Forms.Password }}" class="form-control" placeholder="password">
+                            <input name="password" type="password" class="form-control" placeholder="password">
                         </div>
-                        {{ if .Errors.password }}
-                            <span class="badge badge-danger mb-3">{{ .Errors.password }}</span>
-                        {{ end }}
-
+                        <span class="err-password badge badge-danger mb-3 hide"></span>
                         <div class="row align-items-center remember">
-                            <input name="remember" type="checkbox">Remember Me
+                            <label>
+                                <input name="remember" type="checkbox"> <span style="position: absolute">Remember Me</span>
+                            </label>
                         </div>
                         <div class="form-group">
                             <input name="csrf" type="hidden" value="{{ .Csrf }}">
-                            <input type="submit" value="Login" class="btn float-right login_btn">
+                            <input id="submitLogin" type="button" value="Login" class="btn float-right login_btn">
                         </div>
                     </form>
                 </div>
