--- a/tmpl/layouts/client.html
+++ b/tmpl/layouts/client.html
@@ -10,35 +10,47 @@
         <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no,user-scalable=no">
         <link rel="shortcut icon" href="{{ .FavIcon }}">
 
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700&amp;display=swap" rel="stylesheet">
-
-        <!-- CSS only -->
-        <link href="/assets/styles/main.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="/assets/styles/fgo.css">
         <!--Fontawesome CDN-->
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-        <link rel="stylesheet" href="/assets/styles/bulma/bulma.min.css" >
+        <link rel="stylesheet" href="/assets/styles/fa5.min.css">
+        <link rel="stylesheet" href="/assets/styles/bulma/bulma.min.css">
+        <!-- CSS only -->
+        {{/* <link href="/assets/styles/main.min.css" rel="stylesheet"> */}}
         {{ block "styles" . }} {{ end }}
         {{ block "scripts" . }} {{ end }}
     </head>
     <body>
-    <section id="tools" class="hide">
-        <div class="modal-dialog">
-
+    <div class="modal">
+        <div class="modal-background"></div>
+        <div class="modal-card" style="min-height: 12rem;">
+            <header class="modal-card-head">
+                <p class="modal-card-title">Modal title</p>
+                <button class="delete" aria-label="close"></button>
+            </header>
+            <section class="modal-card-body">
+                <div class="content" style="min-height: 3rem;"></div>
+            </section>
+            <footer class="modal-card-foot">
+                <button class="button button-ok is-success">Save changes</button>
+                <button class="button button-cancel">Cancel</button>
+            </footer>
         </div>
-    </section>
+        <button class="modal-close is-large" aria-label="close"></button>
+    </div>
     <header>
-        {{ template "header" }}
+        {{ template "header" . }}
     </header>
-    <section class="pt-6" id="content" style="margin-bottom: 100px">
-        {{template "content" .}}
+    <section class="pt-4" id="content" style="margin-bottom: 100px">
+        {{template "content" . }}
     </section>
     <footer>
         <div class="bg-dark">
             <div class="col-12 text-center text-white p-3">
-{{/*                <div class="fs-12 copyright">© {{ .CopyrightYear }} {{ .LogoAlt }} • All rights reserved</div>*/}}
+                {{/*                <div class="fs-12 copyright">© {{ .CopyrightYear }} {{ .LogoAlt }} • All rights reserved</div>*/}}
             </div>
         </div>
     </footer>
+    <script src="/assets/scripts/main-client.js"></script>
     {{ block "body_scripts" . }} {{ end }}
     </body>
     </html>
