ui/ux page 360 refinement + refactors

--- a/assets/styles/form360.css
+++ b/assets/styles/form360.css
@@ -1,5 +1,7 @@
-header {
-    margin-top: -2rem;
+.navbar {
+    -webkit-box-shadow: 0 .5em 1em -.125em rgba(10,10,10,.1),0 0 0 1px rgba(10,10,10,.02);
+    -moz-box-shadow: 0 .5em 1em -.125em rgba(10,10,10,.1),0 0 0 1px rgba(10,10,10,.02);
+    box-shadow: 0 .5em 1em -.125em rgba(10,10,10,.1),0 0 0 1px rgba(10,10,10,.02);
 }
 
 .tab-contents .tabs:not(:last-child) {
