--- a/assets/lib/360/style.css
+++ b/assets/lib/360/style.css
@@ -18,6 +18,7 @@
 }
 
 .btn-float{
+    background-color: #f9d71e;
     position:fixed;
     bottom:40px;
     right:40px;
@@ -60,8 +61,8 @@
 /* Create a custom checkbox */
 .checkmark {
     position: absolute;
-    top: -1rem;
-    left: 0;
+    top: 1em;
+    left:0;
     height: 1.3rem;
     width: 1.3rem;
     background-color: #eee;
@@ -103,4 +104,24 @@
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
+}
+
+th:first-child {
+    width: 2rem;
+}
+th:nth-child(2) {
+    width: 10rem;
+}
+th:nth-child(3) {
+    width: 20rem;
+}
+th:nth-child(4) {
+    width: 3rem;
+}
+th.hrating {
+    width: 3rem;
+    text-align: center!important;
+}
+th.hscore {
+    width: 3rem;
 }
