--- a/tmpl/views/login.html
+++ b/tmpl/views/login.html
@@ -1,14 +1,14 @@
 {{ template "layout" . }}
 {{ define "title" }} {{ .PageTitle }} {{ end }}
 {{ define "styles" }}
-    <link href="/assets/styles/login.css" rel="stylesheet">
+    <link href="/assets/lib/login/style.css" rel="stylesheet">
 {{ end }}
 {{ define "scripts" }}
     <script src="//code.jquery.com/jquery-3.5.1.min.js" type="text/javascript"></script>
 {{ end }}
 {{ define "body_scripts" }}
     <script src="/assets/scripts/main.js" type="text/javascript"></script>
-    <script src="/assets/scripts/login.js" type="text/javascript"></script>
+    <script src="/assets/lib/login/script.js" type="text/javascript"></script>
 {{ end }}
 {{ define "content" }}
     <div class="container" style="min-height: 550px;">
